gitops/apps/test-nginx/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: http

    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - nginx-dev.okbear.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: nginx
          port: 80
          weight: 1
